# qutebox

./: CMakeLists.txt  README.md
qutebox/: main.cpp
qutebox/components/: QuteboxMenu.h
qutebox/handlers/: ConfigHandler.cpp  ConfigHandler.h  HotkeyHandler.h
qutebox/menus/main/: MainMenu.cpp  MainMenu.h  MenuItem.h
